server-dev.err.log
D:\qlda\do an\backend\src\app.ts:3
import { apiRouter } from "./routes/api.ts";
         ^

SyntaxError: The requested module './routes/api.ts' does not provide an export named 'apiRouter'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:180:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:263:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:547:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:116:5)

Node.js v22.12.0
